--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,7 +5,7 @@
 @import "header";
 @import "mobile-nav";
 @import "features";
-@import "story";
+@import "registration";
 @import "about";
 @import "nav";
 @import "footer";
